--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -15,6 +15,7 @@ Optimierung:
 
 Neue Implementierungen / Funktionen:
 - Ausgewählte Tabs (rechte Seite) werden gespeichert
+- Live Netzwerk-Pfad-Plot (rechte Seite "Path-Plot")
 
 ###########################################################################################################
 ###########################################################################################################
