- fix: Scripterror messagebox bell command

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.114.x
+Fixes:
+- Scripterror wenn "Messagebox" für Sysop Benachrichtigung erscheint
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.113.x
 Fixes:
 - Windows: Keybindings für F-Texte
