- cliMain.py: add translations - cliMain.py: is_prefix() optimized by Grok..

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,6 +6,7 @@ Fixes:
 Optimierung:
 
 Neue Implementierungen / Funktionen:
+- Remote Kommando "C!" - Exklusiv Connect ohne MH-Listen Lookup nach Pfad
 
 ###########################################################################################################
 ###########################################################################################################
