- fixed: Kiss-Frame Issues - NEtRom decoder Test ..

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,7 +12,8 @@ Fixes:
   (Digi-StopBit der vorherigen Digis wurde nicht korrekt gecheckt)
   !! Danke an Lars und Benny fürs Testen und Melden !!
 - Sporadischer Fehler beim Speichern der popt_main Config
-- Unbekannte KissFrames werden nicht gefiltert
+- Unbekannte/Defekte KissFrames werden nicht gefiltert
+  !! Danke an Patrik !!
 
 Optimierung:
 - APRS-Tracer: Möglichkeit ViaCalls einzugeben hinzugefügt
