--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -15,9 +15,15 @@ Fixes:
 - Unbekannte/Defekte KissFrames werden nicht gefiltert
   !! Danke an Patrik !!
 - File-Transfer Auto-RNR Mode
+- Windows: Probleme beim Schließen des seriellen Ports (PoPT friert ein)
+  !! Danke an Jan !!
+- Port Einstellungen: beim Ändern des COM-Ports wird kein reinit ausgelöst
+- Port Einstellungen: beim löschen des "letzten Ports" wird die GUI nicht aktualisiert
 
 Optimierung:
 - APRS-Tracer: Möglichkeit ViaCalls einzugeben hinzugefügt
+- Windows: Porteinstellungen: Auswahl der COM Ports zum Dropdown Menü geändert
+  (Mir war nicht bewusst, dass es Windows Nutzer so schwerfällt COM1, COM2, ..., einzugeben :D)
 
 Neue Implementierungen / Funktionen:
 - Remote Kommando "C!" - Exklusiv Connect ohne MH-Listen Lookup nach Pfad
