fix: Script-Error when opening Mains-Settings (1Wire Settings causing Issues) add: pinctl_fnc.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,16 @@
 ###########################################################################################################
+# 2.115.x
+Fixes:
+- Script-Error beim Öffnen der Haupteinstellungen (Ausgelöst durch
+  die 1Wire Einstellungen)
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+
+###########################################################################################################
+###########################################################################################################
 # 2.114.x
 Fixes:
 - Scripterror, wenn "Messagebox" für Sysop Benachrichtigung erscheint
