--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,7 +7,7 @@ Fixes:
 Optimierung:
 
 Neue Implementierungen / Funktionen:
-
+- User-DB GUI: Filterfunktion für User Einträge
 
 ###########################################################################################################
 ###########################################################################################################
