--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -9,6 +9,7 @@ Optimierung:
 Neue Implementierungen / Funktionen:
 - User-DB GUI: Filterfunktion für User Einträge
 - User-DB GUI: Neue Einträge können jetzt per Hand hinzugefügt werden
+- Autologin mittels Baycom Login Verfahren
 
 ###########################################################################################################
 ###########################################################################################################
