import for matplotlib changed in guiLiveConnPath.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,15 @@
 ###########################################################################################################
+# 2.116.x
+Fixes:
+
+Optimierung:
+- imports für matplotlib in guiLiveConnPath.py (Pacman)
+
+Neue Implementierungen / Funktionen:
+
+
+###########################################################################################################
+###########################################################################################################
 # 2.115.x
 Fixes:
 - Script-Error beim Öffnen der Haupteinstellungen (Ausgelöst durch
