ax25Kiss.py updated

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@ Neue Implementierungen / Funktionen:
 - "TNC-EMU" Port (TCP-Client). (Pseudo TNC Emulator Port)
   Zum direkten Verbinden von z.B. Dos-Box oder Amiga-Emulator
   mit PoPT. (Derzeit nur ein "Server" pro Port)
+- Dekodieren von Paketen von Multichannel-TNCs (Nur RX für Kanal 1-7)
 
 ###########################################################################################################
 ###########################################################################################################
