- Sidestops/paging for CLI added Paging available for CLI: Mcast BOX NODE - CLI Typ Box added - MsGCenter mark all msg read issues fixed

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@ Optimierung:
 
 Neue Implementierungen / Funktionen:
 - CLI-CMD: LM (List Mails)
+- CLI Seiten-Stops/Paging für MCast, NODE, BOX
+- CLI Typ: BOX
 
 ###########################################################################################################
 ###########################################################################################################
