- CLI-CMD "LN" (List New Mails) added

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,7 +8,8 @@ Optimierung:
 
 Neue Implementierungen / Funktionen:
 - CLI Typ: BOX
-- CLI-CMD: LM (List Mails / Listet alle Mails (P&B))
+- CLI-CMD: LM (List Mails / Listet alle eigenen Mails)
+- CLI-CMD: LN (List New Mails / Listet alle eigenen neuen Mails)
 - CLI-CMD: R (Read Mail / Mail lesen)
 - CLI Seiten-Stops/Paging für MCast, NODE, BOX
 
