--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,6 +7,7 @@ Fixes:
 - FWD-Protokoll: "F>" wird nicht erkannt wenn im Zustand "Warte auf FQ"
   - Führt dazu das PoPT-BOX nicht auf weitere Nachrichten reagiert und
     die Verbindung "hängt".
+- FWD: Sender BBS-Adresse wir teilweise ohne Verteiler gespeichert
 
 Optimierung:
 - T2-Auto Berechnung
