--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -38,6 +38,7 @@ Neue Implementierungen / Funktionen:
 - CLI-CMD: KM (Löscht alle pers. Nachrichten, die man bereits gelesen hat.)
 - CLI-CMD: K (Löscht pers. Nachricht(en), Bsp: K 123 124 128)
 - CLI-CMD: R (Read Mail / Mail lesen)
+- CLI-CMD: SP (Send Private Mail / Sende Private Mail)
 - CLI Seiten-Stops/Paging für MCast, NODE, BOX
 - PMS-Setting "Reverse-FWD" (nach Zeitplan connecten) für jeweiligen BBS-FWD
   setzbar
