- fixed: MSG-Center Category selector/Filter - fixed: Sysop-MSG "NO ROUTE" is sendet even when bbs is in fwd-path - fixed: MSG-Center BBS>FWD-Q doesn't show msg when selected - added: MSG-Center BBS: MSG-Header added to selected msg - fixed: "Sysop-Bell" Settings are not saved

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -9,6 +9,8 @@ Fixes:
     die Verbindung "hängt".
 - FWD: Sender BBS-Adresse wir teilweise ohne Verteiler gespeichert
 - Unvollständiger PR-Mail Header. (From:, To:)
+- MH-Liste und User-DB werden beim Beenden von PoPT gelegentlich zerstört.
+- "Sysop-Bell" Einstellungen werden nicht gespeichert
 
 Optimierung:
 - T2-Auto Berechnung
