opt: sql-query's for delete messages added: cleanup routine for SQL-Table 'pms_fwd_q'

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -26,6 +26,7 @@ Optimierung:
 - Cleanup Stingtabelle in CLI-Funktionen
 - Übersetzungen im "Message-Center" vervollständigt
 - Spalte für "Flag" im "Message-Center" für PN und BL
+- SQL-Querys fürs Handeln großer Datenmengen beim Löschen
 
 Neue Implementierungen / Funktionen:
 - Forward-Protokoll BinMail (Bin Mode) lzhuf Komprimierung
