added: BOX CLI-CMD: "L<" <CALL> Lists bulletins FROM a callsign. added: BOX CLI-CMD: "L>" <CALL/RUBRIK>: Lists messages TO a call sign or heading.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -42,9 +42,11 @@ Neue Implementierungen / Funktionen:
 - CLI-CMD: LM (List Mails / Listet alle eigenen Mails)
 - CLI-CMD: LN (List New Mails / Listet alle eigenen neuen Mails)
 - CLI-CMD: LL (List all Mails / Listet alle Mails)
+- CLI-CMD: L< (<CALL> Listet Bulletins VON einem Rufzeichen)
+- CLI-CMD: L> (<CALL/RUBRIK>: Listet Nachrichten AN ein Rufzeichen oder Rubrik.)
 - CLI-CMD: KM (Löscht alle pers. Nachrichten, die man bereits gelesen hat.)
-- CLI-CMD: K (Löscht pers. Nachricht(en), Bsp: K 123 124 128)
-- CLI-CMD: R (Read Mail / Mail lesen)
+- CLI-CMD: K  (Löscht pers. Nachricht(en), Bsp: K 123 124 128)
+- CLI-CMD: R  (Read Mail / Mail lesen)
 - CLI-CMD: SP (Send Private Mail / Sende Private Mail)
 - CLI-CMD: SB (Send Bulletin Mail / Sende Bulletin Mail)
 - CLI Seiten-Stops/Paging für MCast, NODE, BOX
