added: BOX CLI-CMD: "L@" <CALL>: Lists bulletins VIA distribution.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -44,6 +44,7 @@ Neue Implementierungen / Funktionen:
 - CLI-CMD: LL (List all Mails / Listet alle Mails)
 - CLI-CMD: L< (<CALL> Listet Bulletins VON einem Rufzeichen)
 - CLI-CMD: L> (<CALL/RUBRIK>: Listet Nachrichten AN ein Rufzeichen oder Rubrik.)
+- CLI-CMD: L@ (<CALL>: Listet Bulletins VIA Verteiler.)
 - CLI-CMD: KM (Löscht alle pers. Nachrichten, die man bereits gelesen hat.)
 - CLI-CMD: K  (Löscht pers. Nachricht(en), Bsp: K 123 124 128)
 - CLI-CMD: R  (Read Mail / Mail lesen)
