added: BBS: First User registration.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -64,6 +64,7 @@ Neue Implementierungen / Funktionen:
   Luftfeuchtigkeit, wenn Daten vorhanden sind.
 - BBS/PMS AutoMail. Vordefinierte Mails können nach Zeitplan gesendet werden.
 - BBS Mail Import. Mails werden aus Datei data/bbs/import/import.poxt importiert.
+- BBS Erst Benutzer Registrierung.
 
 ###########################################################################################################
 ###########################################################################################################
