GUI: "New Connection" window revised.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.118.x
+Fixes:
+
+Optimierung:
+- GUI: "Neue Verbindung" Fenster überarbeitet.
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.117.x
 Fixes:
 - PMS-Setting "AutoFWD" war ohne Funktion
