Pseudo TX delay enabled for AXIP port. (For problems with BPQ)

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,6 +4,7 @@ Fixes:
 
 Optimierung:
 - GUI: "Neue Verbindung" Fenster überarbeitet.
+- Pseudo TX-Delay für AXIP-Port aktiviert. (Bei Probleme mit BPQ)
 
 Neue Implementierungen / Funktionen:
 
